--- a/style.css
+++ b/style.css
@@ -13,13 +13,12 @@
 .img-fluid {
   display: block;
   margin: 10px auto;
-  max-width: 250px;
   height: auto;
 }
 
 .navigation-links {
   display: flex;
-  margin-top: 40px;
+  margin-top: 30px;
   justify-content: center;
 }
 
@@ -67,4 +66,8 @@ a {
 .portfolio {
   margin: 50px auto;
   padding: 40px;
+}
+img,
+svg {
+  vertical-align: middle;
 }
