--- a/style.css
+++ b/style.css
@@ -65,13 +65,14 @@
   font-weight: 500;
   font-size: 25px;
   padding: 10px;
+  margin: 5px;
 }
 a {
   font-weight: 500;
 }
 .portfolio {
   margin: 50px auto;
-  padding: 40px;
+  padding: 25px;
 }
 img,
 svg {
@@ -84,25 +85,36 @@ svg {
 .bottomLine {
   background-color: #ffc7c7;
   color: #8785a2;
-  margin: 60px 15px 15px;
-  
+  margin: 15px auto;
 }
 
-#contact {
-  margin-top: 100px;
-  font-size: 27px;
-  color: #8785a2; font-weight: 500;
-}
-@media (min-width: 375px){
-  .navigation-links a  { 
+@media (max-width: 375px) {
+  .navigation-links a {
     margin: 0 auto;
     border-radius: 4px;
     padding: 8px 10px;
     text-decoration: none;
     text-transform: capitalize;
-}
-.greeting {
-  margin-top: 95px;
-  font-size: small;
-}
-}
+  }
+  h5 {
+    font-size: medium;
+    margin: 20px;
+  }
+  .greeting {
+    margin-top: 100px;
+    font-size: small;
+  }
+  .navbar {
+    margin-top: 5px;
+  }
+  .contactLink {
+  margin-top: 100px;
+  font-size: 27px;
+  color: #8785a2;
+  font-weight: 500;
+}}
+  .bottomLine {
+    margin: 20px auto;
+    font-size: small;
+  }
+  
