--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@
 }
 
 .navigation-links a {
-  margin: 0 15px;
+  margin: 15px auto;
   border-radius: 4px;
-  padding: 20px 15px;
+  padding: 8px 10px;
   text-decoration: none;
   text-transform: capitalize;
 }
@@ -90,7 +90,7 @@ svg {
 
 @media (max-width: 375px) {
   .navigation-links a {
-    margin: 0 auto;
+    margin:  12px auto;
     border-radius: 4px;
     padding: 8px 10px;
     text-decoration: none;
@@ -102,8 +102,8 @@ svg {
   }
   .greeting {
     margin-top: 100px;
-    font-size: small;
-  }
+     }
+ 
   .navbar {
     margin-top: 5px;
   }
