--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   --secondary-color: #8785a2;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
+body, h1, h2, h3, .navbar {font-family: 'Poppins', sans-serif;}
+ 
 .greeting {
   margin-top: 110px;
 }
@@ -67,8 +69,8 @@
   padding: 10px;
   margin: 5px;
 }
-a {
-  font-weight: 500;
+a {font-size: 20px;
+  font-weight:500;
 }
 .portfolio {
   margin: 50px auto;
@@ -90,7 +92,7 @@ svg {
 
 @media (max-width: 375px) {
   .navigation-links a {
-    margin:  12px auto;
+    margin: 12px auto;
     border-radius: 4px;
     padding: 8px 10px;
     text-decoration: none;
@@ -102,19 +104,25 @@ svg {
   }
   .greeting {
     margin-top: 100px;
-     }
- 
+  }
+
   .navbar {
     margin-top: 5px;
-  }
-  .contactLink {
-  margin-top: 100px;
-  font-size: 27px;
-  color: #8785a2;
-  font-weight: 500;
-}}
-  .bottomLine {
-    margin: 20px auto;
-    font-size: small;
-  }
+    font-family: "Playfair Display SC", serif;}
   
+  .contactLink {
+    font-size: 18px;
+    color: #8785a2;
+    font-weight: 500;
+  }
+a{font-size: 18px;}}
+
+.bottomLine {
+  margin: 20px auto;
+  font-size: small;
+}
+  .contactLink {text-align: center;
+    margin-top: 100px;
+    font-size: 22px;
+    color: #8785a2;
+    font-weight: 500;}
