--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ h3 {
 
 .navigation-links {
   display: flex;
-  margin-top: 30px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   justify-content: center;
 }
 
@@ -73,9 +74,10 @@ h3 {
   color: var(--secondary-color);
   font-weight: 500;
   font-size: 25px;
-  padding: 10px;
-  margin: 5px;
+  padding: 10px 50px;
+  margin: 0 25px;
 }
+
 a {
   font-size: 20px;
   font-weight: 500;
@@ -133,6 +135,15 @@ svg {
   .contact-box .btn a { padding: 20px auto; 
   font-size: 18px;} 
   .contact-box .btn{margin: 27px auto;}
+
+  .navbar .container-fluid a {
+  color: var(--secondary-color);
+  font-weight: 500;
+  font-size: 20px;
+  padding: 8px 20px;
+  margin: 0 10px;
+}
+
 }
 .contactLink {
   font-size: 18px;
@@ -146,7 +157,6 @@ svg {
 }
 .contactLink {
   text-align: center;
-  margin-top: 100px;
   font-size: 22px;
   color: #8785a2;
   font-weight: 500;
